--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "dependencies": {
     "@astrojs/check": "^0.2.0",
     "@astrojs/rss": "^3.0.0",
+    "@astrojs/vercel": "^6.1.3",
     "@resvg/resvg-js": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.2",
-    "astro": "^3.1.3",
+    "astro": "^4.1.1",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
     "remark-collapse": "^0.1.2",
@@ -33,7 +34,7 @@
   "devDependencies": {
     "@astrojs/react": "^3.0.2",
     "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@divriots/jampack": "^0.20.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
